Nav bar height bug caused nav to be too tall fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	margin-top: 0;
 	line-height: 1.4;
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -94,16 +95,18 @@ h2 {
 | Nav
 ===============*/
 nav{
+	margin-top: 0;
 	background-color: white;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	box-shadow: 0 8px 15px rgba(0,0,0,0.1);
-		z-index: 2;
+	z-index: 2;
 }
 .primary-nav {
 	float: right;
+	margin: 0 auto;
 }
 .primary-nav > li {
 	float:left;
@@ -114,11 +117,11 @@ nav{
 	width: 150px;
 	text-align: center;
 }
-.nav-logo {
+nav .nav-logo {
 	float: left;
-	padding: 25px 0;
-	padding-left: 25px;
-	width: 150px;
+/*	padding: 12px 0 12px 12px;
+	width: 150px;*/
+	/*margin: 10px 0 8px 30px;*/
 }
 nav li a:focus,
 nav li a:hover,
@@ -254,7 +257,9 @@ nav li a:active {
 		overflow: hidden;
 	}
 	.primary-nav.active{
-		max-height: 350px;
+		max-height: 340px;
+		margin-bottom: 0;
+		margin-top: 0;
 	}
 	.primary-nav > li{
 		width: 100%;
